// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account reducers update account 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": true,
    },
  },
  "settings": Array [],
}
`;

exports[`current account reducers update account 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": false,
    },
  },
  "current_subscription": undefined,
  "settings": Array [
    Object {
      "id": 10,
    },
  ],
}
`;

exports[`current account reducers update account 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": false,
    },
  },
  "settings": Array [],
}
`;

exports[`current account reducers update account owner 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [],
  "user_id": 1,
}
`;

exports[`current account reducers update setting 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [
    Object {
      "hello": "world",
    },
  ],
}
`;

exports[`current account reducers update setting 2`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [
    Object {
      "hello": "world",
      "id": 1,
    },
  ],
}
`;

exports[`current account reducers update subscription with an existing subscription 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "current_subscription": Object {
    "plan": "basic-usd-1",
  },
  "settings": Array [],
}
`;

exports[`current account reducers update subscription without any existing subscription 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "current_subscription": Object {
    "plan": "basic-usd-1",
  },
  "settings": Array [],
}
`;
